--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -56,6 +56,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
+                android:drawableStart="@drawable/ic_business_center"
+                android:drawableTint="@color/colorGray"
                 android:background="@drawable/edit_design"
                 android:elevation="10dp"
                 android:hint="Domain"
@@ -68,6 +70,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
+                android:drawableStart="@drawable/ic_person"
+                android:drawableTint="@color/colorGray"
                 android:background="@drawable/edit_design"
                 android:elevation="10dp"
                 android:hint="Full name"
@@ -81,6 +85,8 @@
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/edit_design"
+                android:drawableStart="@drawable/ic_person"
+                android:drawableTint="@color/colorGray"
                 android:elevation="10dp"
                 android:hint="username"
                 android:paddingStart="20dp"
@@ -93,6 +99,8 @@
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/edit_design"
+                android:drawableStart="@drawable/ic_email"
+                android:drawableTint="@color/colorGray"
                 android:elevation="10dp"
                 android:inputType="textEmailAddress"
                 android:hint="Email"
@@ -106,6 +114,8 @@
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/edit_design"
+                android:drawableStart="@drawable/ic_lock"
+                android:drawableTint="@color/colorGray"
                 android:elevation="10dp"
                 android:hint="Password"
                 android:inputType="textPassword"
@@ -121,6 +131,8 @@
                 android:background="@drawable/edit_design"
                 android:elevation="10dp"
                 android:hint="Confirm password"
+                android:drawableStart="@drawable/ic_lock"
+                android:drawableTint="@color/colorGray"
                 android:inputType="textPassword"
                 android:paddingStart="20dp"
                 android:paddingEnd="5dp"
