--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,6 +52,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/edit_design"
+                android:drawableStart="@drawable/ic_business_center"
+                android:drawableTint="@color/colorGray"
                 android:hint="Domain"
                 android:textSize="14sp"
                 android:paddingStart="20dp"
@@ -63,6 +65,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/edit_design"
+                android:drawableStart="@drawable/ic_person"
+                android:drawableTint="@color/colorGray"
                 android:hint="Username"
                 android:textSize="14sp"
                 android:paddingStart="20dp"
@@ -74,6 +78,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/edit_design"
+                android:drawableStart="@drawable/ic_lock"
+                android:drawableTint="@color/colorGray"
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:textSize="14sp"
